--- a/.github/workflows/new_issue.yml
+++ b/.github/workflows/new_issue.yml
@@ -10,6 +10,9 @@ jobs:
     permissions:
       issues: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Check github context
         run: echo "${{ toJSON(github) }}"
         env:
