--- a/.github/workflows/lint_test_build.yml
+++ b/.github/workflows/lint_test_build.yml
@@ -27,3 +27,5 @@ jobs:
         run: npm run test
       - name: Build
         run: npm run build
+      - name: Deploy
+        run: echo "Deployment completed..."
