--- a/.github/workflows/lint_test_build.yml
+++ b/.github/workflows/lint_test_build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: basic_workflows
+        working-directory: src
     steps:
       - name: Checkout
         uses: actions/checkout@v4
