--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -17,6 +20,9 @@ jobs:
         run: npm run test
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -30,6 +36,9 @@ jobs:
           path: dist
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
