--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: dist
+          path: src/dist
   deploy:
     runs-on: ubuntu-latest
     defaults:
