--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -20,6 +20,7 @@ jobs:
         run: npm run test
   build:
     runs-on: ubuntu-latest
+    needs: test
     defaults:
       run:
         working-directory: src
@@ -36,6 +37,7 @@ jobs:
           path: src/dist
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     defaults:
       run:
         working-directory: src
