--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -24,6 +24,8 @@ jobs:
     defaults:
       run:
         working-directory: src
+    outputs:
+      script-file: ${{ steps.build.outputs.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -31,6 +33,9 @@ jobs:
         run: npm ci
       - name: Build code
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type -f execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
@@ -45,3 +50,5 @@ jobs:
           name: dist-files
       - name: Output files
         run: ls
+      - name: Output filename
+        run: echo ${{ needs.build.outputs.script-file }}
