--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run build
       - name: Publish JS filename
         id: publish
-        run: find dist/assets/*.js -type -f execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+        run: find dist/assets/*.js -type f -exec echo "script-file={}" >> $GITHUB_OUTPUT \;
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
