--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -4,13 +4,13 @@ on:
     types:
       - opened
     branches:
-      - test # test
+      - main # test
       - "dev-*" # dev-new dev-this-is-new
       - "feat/**" # feat/new feat/this-is-new
   workflow_dispatch:
   push:
     branches:
-      - test
+      - main
     paths-ignore: # runs when any file change except this
       - ".github/workflows/*"
     # paths: runs only when specified file path change
