--- a/.github/workflows/variables_secrets.yml
+++ b/.github/workflows/variables_secrets.yml
@@ -4,17 +4,15 @@ on:
     branches:
       - main
   workflow_dispatch:
-environment: production
 jobs:
-  env:
-    GREETING_TEXT: "Hello pipelines"
-  build:
+  echo-variables:
+    environment: production
+    env:
+      GREETING_TEXT: "Hello pipelines"
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v4
-      - name: Show context
-        run: echo "${{ toJSON(github) }}"
       - name: Show secret
         run: echo "${{ secrets.TEST_SECRET }}"
       - name: Show variable
