Added show context step

--- a/.github/workflows/variables_secrets.yml
+++ b/.github/workflows/variables_secrets.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v4
+      - name: Show context
+        run: echo "${{ toJSON(github) }}"
       - name: Show secret
         run: echo "${{ secrets.TEST_SECRET }}"
       - name: Show variable
