Show envs instead context

--- a/.github/workflows/variables_secrets.yml
+++ b/.github/workflows/variables_secrets.yml
@@ -11,8 +11,8 @@ jobs:
       GREETING_TEXT: "Hello pipelines"
     runs-on: ubuntu-latest
     steps:
-      - name: Show context
-        run: echo "${{ toJSON(github) }}"
+      - name: Show envs
+        run: echo "${{ toJSON(env) }}"
       - name: Show secret
         run: echo "${{ secrets.TEST_SECRET }}"
       - name: Show variable
