Update GitHub Actions workflow to use new environment syntax and variable reference

--- a/.github/workflows/variables_secrets.yml
+++ b/.github/workflows/variables_secrets.yml
@@ -6,16 +6,15 @@ on:
   workflow_dispatch:
 jobs:
   echo-variables:
-    environment: production
+    environment:
+      name: production
     env:
       GREETING_TEXT: "Hello pipelines"
     runs-on: ubuntu-latest
     steps:
-      - name: Show envs
-        run: echo "${{ toJSON(env) }}"
       - name: Show secret
         run: echo "${{ secrets.TEST_SECRET }}"
       - name: Show variable
-        run: echo "${{ env.TEST_VARIABLE }}"
+        run: echo "${{ vars.TEST_VARIABLE }}"
       - name: Show alternative syntax
         run: echo $GREETING_TEXT
