Added more description to step names

--- a/.github/workflows/variables_secrets.yml
+++ b/.github/workflows/variables_secrets.yml
@@ -9,12 +9,12 @@ jobs:
     environment:
       name: production
     env:
-      GREETING_TEXT: "Hello pipelines"
+      GREETING_TEXT: "Pipeline defined variable"
     runs-on: ubuntu-latest
     steps:
-      - name: Show secret
+      - name: Show environment secret
         run: echo "${{ secrets.TEST_SECRET }}"
-      - name: Show variable
+      - name: Show environment variable
         run: echo "${{ vars.TEST_VARIABLE }}"
-      - name: Show alternative syntax
+      - name: Show pipeline variable
         run: echo $GREETING_TEXT
