--- a/.github/workflows/use_reuse.yml
+++ b/.github/workflows/use_reuse.yml
@@ -1,4 +1,4 @@
-name: Use_reuse
+name: Use reusable workflow
 on:
   push:
     branches:
@@ -55,5 +55,14 @@ jobs:
           name: dist-files
           path: src/dist
   deploy:
-    uses: ./.github/workflows/reusable_workflow.yml
+    runs-on: ubuntu-latest
     needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+      - name: Output files
+        run: ls
+      - name: Output filename
+        run: echo ${{ needs.build.outputs.js-filename }}
