--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: src/dist
+          path: ${{steps.publish.outputs.js_filename}}
   deploy:
     runs-on: ubuntu-latest
     needs: build
