--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -48,7 +48,8 @@ jobs:
       - name: Publish JS filename
         id: publish
         run: |
-          js_file=$(basename dist/assets/*.js)
+          echo "js_file=$(basename dist/assets/*.js)"
+          echo "$js_file"
           echo "js_filename=$js_file" >> $GITHUB_OUTPUT
       - uses: actions/upload-artifact@v4
         with:
