--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: ${{steps.publish.outputs.js_filename}}
+          path: src/dist
   deploy:
     runs-on: ubuntu-latest
     needs: build
