--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -6,9 +6,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: src
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -42,6 +39,8 @@ jobs:
         run: npm ci
       - name: Build code
         run: npm run build
+      - name: Output files
+        run: ls
       - name: Publish JS filename
         id: publish
         run: |
@@ -51,7 +50,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: src/dist
+          path: dist
   deploy:
     runs-on: ubuntu-latest
     needs: build
