--- a/.github/workflows/reusable_workflow.yml
+++ b/.github/workflows/reusable_workflow.yml
@@ -1,8 +1,21 @@
 name: reusable_workflow
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: The name of the deployable artifact files
+        required: false
+        default: dist
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy
-        run: echo "Deploying..."
+      - name: Get Code
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{inputs.artifact-name}}
+      - name: Output files
+        run: ls
+      - name: Output information
+        run: echo "Deploying & uploading"
