--- a/.github/workflows/use_reuse.yml
+++ b/.github/workflows/use_reuse.yml
@@ -6,9 +6,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: src
     steps:
       - name: Get code
         uses: actions/checkout@v4
@@ -27,9 +24,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: test
-    defaults:
-      run:
-        working-directory: src
     outputs:
       js-filename: ${{ steps.publish.outputs.js_filename }}
     steps:
@@ -45,24 +39,19 @@ jobs:
         run: npm ci
       - name: Build code
         run: npm run build
+      - name: Output files
+        run: ls
       - name: Publish JS filename
         id: publish
         run: |
           js_file=$(basename dist/assets/*.js)
+          echo "$js_file"
           echo "js_filename=$js_file" >> $GITHUB_OUTPUT
       - uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: src/dist
+          path: dist
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-files
-      - name: Output files
-        run: ls
-      - name: Output filename
-        run: echo ${{ needs.build.outputs.js-filename }}
+    uses: /.github/workflows/reusable_workflow.yml
