--- a/.github/workflows/use_reuse.yml
+++ b/.github/workflows/use_reuse.yml
@@ -54,4 +54,4 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    uses: /.github/workflows/reusable_workflow.yml
+    uses: ./.github/workflows/reusable_workflow.yml
