Added with parameter

--- a/.github/workflows/use_reuse.yml
+++ b/.github/workflows/use_reuse.yml
@@ -54,3 +54,5 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reusable_workflow.yml
+    with:
+      artifact-name: dist-files
