--- a/.github/workflows/use_reuse.yml
+++ b/.github/workflows/use_reuse.yml
@@ -56,3 +56,9 @@ jobs:
     uses: ./.github/workflows/reusable_workflow.yml
     with:
       artifact-name: dist-files
+  print-deploy-result:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Print deplout output
+        run: echo "${{ needs.deploy.outputs.result }}"
